Got the voice recorder and playback test working.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AlexaAlarmClock</string>
+    <string name="record">Record</string>
+    <string name="stop">Stop</string>
+    <string name="recording_name">Recording Name</string>
+    <string name="play">Play Back</string>
 </resources>
