Added intent to edit current alarm. Formatted the time textview in VoiceRecorderActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="success_inserting">Success inserting the new alarm</string>
     <string name="fail_updating">Failed to updating the alarm</string>
     <string name="success_updating">Success updating the alarm</string>
+
+    <string name="options_menu_delete">Delete</string>
 </resources>
